force-app/main/default/objects/HFS_Event__c/HFS_Event__c.object-meta.xml
<CustomObject>
    <description>Immutable source event envelope and intake result.</description>
    <label>Event</label>
    <nameField>
        <displayFormat>EVT-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>