force-app/main/default/objects/HFS_Event__c/fields/Causation_Id__c.field-meta.xml
<CustomField>
    <fullName>Causation_Id__c</fullName>
    <label>Causation ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>