force-app/main/default/objects/HFS_Event__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <label>Content Hash</label>
    <length>71</length>
    <required>true</required>
    <type>Text</type>
</CustomField>