force-app/main/default/objects/HFS_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>