force-app/main/default/objects/HFS_Event__c/fields/Intake_Result__c.field-meta.xml
<CustomField>
    <fullName>Intake_Result__c</fullName>
    <label>Intake Result</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCEPTED</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>DUPLICATE</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>REJECTED_SCHEMA</fullName>
                <label>Rejected Schema</label>
            </value>
            <value>
                <fullName>REJECTED_HASH</fullName>
                <label>Rejected Hash</label>
            </value>
            <value>
                <fullName>REJECTED_IDEMPOTENCY_CONFLICT</fullName>
                <label>Rejected Idempotency Conflict</label>
            </value>
            <value>
                <fullName>ACCEPTED_LATE</fullName>
                <label>Accepted Late</label>
            </value>
            <value>
                <fullName>ACCEPTED_OUT_OF_ORDER</fullName>
                <label>Accepted Out Of Order</label>
            </value>
            <value>
                <fullName>CONFLICT_REVIEW</fullName>
                <label>Conflict Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>