force-app/main/default/objects/HFS_Event__c/fields/Observed_At__c.field-meta.xml
<CustomField>
    <fullName>Observed_At__c</fullName>
    <label>Observed At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>