force-app/main/default/objects/HFS_Event__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record ID</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>