force-app/main/default/objects/HFS_Event__c/fields/Source_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Source_Sequence__c</fullName>
    <label>Source Sequence</label>
    <required>true</required>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>