force-app/main/default/objects/HFS_Event__c/fields/Source_URI__c.field-meta.xml
<CustomField>
    <fullName>Source_URI__c</fullName>
    <label>Source URI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>