force-app/main/default/objects/HFS_Event__c/validationRules/Observed_After_Occurrence.validationRule-meta.xml
<ValidationRule>
    <fullName>Observed_After_Occurrence</fullName>
    <active>true</active>
    <description>Observed At cannot be earlier than Occurred At.</description>
    <errorConditionFormula>Observed_At__c &lt; Occurred_At__c</errorConditionFormula>
    <errorMessage>Observed At cannot be earlier than Occurred At.</errorMessage>
</ValidationRule>